snapshot in early alpha state